<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BRC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">使用者名稱</string>
	<string name="password">密碼</string>
	<string name="again_password">請再輸入相同密碼</string>
	<string name="register">註冊</string>
	<string name="password_forget">忘記密碼</string>
	<string name="login">登入</string>
	<string name="password_error">密碼錯誤</string>
	<string name="ok">確認</string>
	<string name="mail">電子郵件</string>
	<string name="mail_error">信箱與註冊時不一致</string>
	<string name="logo">Buy Together</string>
	<string name="buyTogether">Buy Together</string>
	<string name="find_password">取回密碼</string>
	<string name="register_info">請輸入基本資料</string>
</resources>