<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <EditText
        android:id="@+id/forget_account"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint= "@string/user_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLength="15"
        android:textSize="14sp"
        android:inputType="textPersonName" >

    </EditText>

    <Button
        android:id="@+id/button_register"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/button_login"
        android:layout_alignBottom="@+id/button_login"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/button_login"
        android:background="#CCCCCCCC"
        android:text="@string/register" />

    <Button
        android:id="@+id/button_forget"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="73dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/button_register"
        android:layout_alignBottom="@+id/button_register"
        android:layout_alignRight="@+id/password"
        android:background="#CCCCCCCC"
        android:text="@string/password_forget" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/forget_account"
        android:layout_below="@+id/forget_account"
        android:layout_marginTop="22dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forget_account"
        android:layout_alignLeft="@+id/button_register"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:text="@string/password_error"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="29dp"
        android:background="#CCCCCCCC"       
        android:text="@string/login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_error"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo3" />

</RelativeLayout>