<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    
    <EditText
        android:id="@+id/forget_account"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint= "@string/user_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLength="15"
        android:textSize="14sp"
        android:inputType="textEmailAddress" >

    </EditText>



    <EditText
        android:id="@+id/forget_mail"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/forget_account"
        android:layout_below="@+id/forget_account"
        android:layout_marginTop="22dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/forget_ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/forget_mail"
        android:layout_below="@+id/forget_mail"
        android:layout_marginTop="33dp"
        android:background="#CCCCCCCC"
        android:onClick="mail_error"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/mail_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forget_account"
        android:layout_centerHorizontal="true"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:text="@string/mail_error"
        android:visibility="invisible" />


</RelativeLayout>